# amgcl-c

./: .gitignore  CMakeLists.txt  README.md
cmake/: Config.cmake.in  specialize.cmake
examples/: CMakeLists.txt  example-capi.c  example_capi.c  example_test.c
include/: CMakeLists.txt  amgcl-c.h  amgcl_c.h  amgcl_c_tv_ti.h.in  common.hxx  test.h
src/: CMakeLists.txt  amgcl-c.cxx  amgcl_c.cxx  amgcl_tv_ti.cxx.in  block_amgcl_tv_ti.cxx.in  common.cxx.in  default_params.cxx  test.c
